--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
   <h1>js-campominato</h1>
+  <div>
+    <ul id="bridge"></ul>
+  </div>
   <script src="js/script.js" charset="utf-8"></script>
 </body>
 </html>
