--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <ul id="bridge"></ul>
   </div>
   <script src="js/script.js" charset="utf-8"></script>
+  <!-- <script src="js/script.old.js" charset="utf-8"></script> -->
 </body>
 </html>
