Trying to add some validation

--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
   </div>
   <script src="js/script.js" charset="utf-8"></script>
   <!-- <script src="js/script.old.js" charset="utf-8"></script> -->
+  <!-- <script src="js/test.js" charset="utf-8"></script> -->
 </body>
 </html>
